Added social links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>🤡Smile-a-ton🤡</title>
     <meta charset="UTF-8" />
     <!-- <link href="src/manifest.json" rel="manifest" /> -->
   </head>
@@ -38,7 +38,25 @@
       </button>
       
     </div>
-
+    <div class='social-share'>
+      <a 
+        href='https://www.facebook.com/dialog/share?app_id=<APP_ID>&href=http://humourfoundation.org.au' 
+        target='_blank'
+        title='Thank you for your smile!'
+        id='facebook'
+      >
+        Facebook
+      </a>
+      <a 
+        id='twitter' 
+        href="https://twitter.com/intent/tweet?text=I%20have%20just%20donated%20to%20the%20humour%20foundation.%20With%20a%20big%20smile%21%20&hashtags=humourfoundation%2C%20clowndoctors"
+        title='Thank you for your smile!'
+        target='_blank'
+      >
+        Twitter
+      </a>
+      
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
